--- a/payment_rave/i18n/id.po
+++ b/payment_rave/i18n/id.po
@@ -1,6 +1,6 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * payment_rave
+# * payment_stripe
 # 
 # Translators:
 # Wahyu Setiawan <wahyusetiaaa@gmail.com>, 2017
@@ -20,127 +20,127 @@ msgstr ""
 "Language: id\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:8
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:8
 #, python-format
 msgid "&times;"
 msgstr "&times;"
 
-#. module: payment_rave
-#: model:ir.model.fields,help:payment_rave.field_payment_acquirer_stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,help:payment_stripe.field_payment_acquirer_stripe_image_url
 msgid ""
 "A relative or absolute URL pointing to a square image of your brand or "
 "product. As defined in your Stripe profile. See: "
 "https://stripe.com/docs/checkout"
 msgstr ""
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
+#. module: payment_stripe
+#: model_terms:ir.ui.view,arch_db:payment_stripe.stripe_s2s_form
 msgid "CVC"
 msgstr ""
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
+#. module: payment_stripe
+#: model_terms:ir.ui.view,arch_db:payment_stripe.stripe_s2s_form
 msgid "Card number"
 msgstr "Nomor kartu"
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
+#. module: payment_stripe
+#: model_terms:ir.ui.view,arch_db:payment_stripe.stripe_s2s_form
 msgid "Cardholder name"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer_stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer_stripe_image_url
 msgid "Checkout Image URL"
 msgstr ""
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:15
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:15
 #, python-format
 msgid "Close"
 msgstr "Tutup"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:9
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:9
 #, python-format
 msgid "Error"
 msgstr "Gagal!"
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
+#. module: payment_stripe
+#: model_terms:ir.ui.view,arch_db:payment_stripe.stripe_s2s_form
 msgid "Expires (MM / YY)"
 msgstr ""
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:32
+#: code:addons/payment_stripe/static/src/js/stripe.js:32
 #, python-format
 msgid "Just one more second, confirming your payment..."
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_acquirer
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_acquirer
 msgid "Payment Acquirer"
 msgstr "Acquirer pembayaran"
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_transaction
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_transaction
 msgid "Payment Transaction"
 msgstr "Transaksi pembayaran"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:57
+#: code:addons/payment_stripe/static/src/js/stripe.js:57
 #, python-format
 msgid "Payment error"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:167
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:167
 #, python-format
 msgid ""
 "Perhaps the problem can be solved by double-checking your credit card "
 "details, or contacting your bank?"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer_stripe_publishable_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer_stripe_publishable_key
 msgid "Stripe Publishable Key"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer_stripe_secret_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer_stripe_secret_key
 msgid "Stripe Secret Key"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:165
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:165
 #, python-format
 msgid "Stripe gave us the following info about the problem: '%s'"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:177
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:177
 #, python-format
 msgid "Stripe: %s orders found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:173
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:173
 #, python-format
 msgid "Stripe: no order found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:163
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:163
 #, python-format
 msgid "We're sorry to report that the transaction has failed."
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_token
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_token
 msgid "payment.token"
 msgstr ""
