--- a/payment_rave/i18n/sk.po
+++ b/payment_rave/i18n/sk.po
@@ -1,20 +1,22 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * payment_rave
+# 	* payment_stripe
 # 
 # Translators:
-# Martin Trigaux, 2018
-# Pavol Krnáč <pavol.krnac@ekoenergo.sk>, 2018
-# Jaroslav Bosansky <jaro.bosansky@ekoenergo.sk>, 2018
-# Miroslav Fic <mirko.fic@gmail.com>, 2018
-# gebri <gebri@inmail.sk>, 2018
+# Martin Trigaux, 2019
+# Pavol Krnáč <pavol.krnac@ekoenergo.sk>, 2019
+# Jaroslav Bosansky <jaro.bosansky@ekoenergo.sk>, 2019
+# Miroslav Fic <mirko.fic@gmail.com>, 2019
+# gebri <gebri@inmail.sk>, 2019
+# Jan Prokop, 2019
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server saas~11.5\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-09-21 13:17+0000\n"
-"PO-Revision-Date: 2018-09-21 13:17+0000\n"
-"Last-Translator: gebri <gebri@inmail.sk>, 2018\n"
+"POT-Creation-Date: 2019-10-07 07:13+0000\n"
+"PO-Revision-Date: 2019-08-26 09:12+0000\n"
+"Last-Translator: Jan Prokop, 2019\n"
 "Language-Team: Slovak (https://www.transifex.com/odoo/teams/41243/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,182 +24,154 @@ msgstr ""
 "Language: sk\n"
 "Plural-Forms: nplurals=4; plural=(n % 1 == 0 && n == 1 ? 0 : n % 1 == 0 && n >= 2 && n <= 4 ? 1 : n % 1 != 0 ? 2: 3);\n"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:9
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "&times;"
 msgstr "&times;"
 
-#. module: payment_rave
-#: model:ir.model.fields,help:payment_rave.field_payment_acquirer__stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,help:payment_stripe.field_payment_acquirer__stripe_image_url
 msgid ""
 "A relative or absolute URL pointing to a square image of your brand or "
 "product. As defined in your Stripe profile. See: "
 "https://stripe.com/docs/checkout"
 msgstr ""
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Adyen"
-msgstr "Adyen"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Authorize.Net"
-msgstr "Authorize.Net "
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Buckaroo"
-msgstr "Buckaroo"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "CVC"
-msgstr "CVC"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Card number"
-msgstr "Číslo karty"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Cardholder name"
-msgstr ""
-
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_image_url
 msgid "Checkout Image URL"
 msgstr ""
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:15
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "Close"
 msgstr "Zatvor"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:8
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "Error"
 msgstr "Chyba"
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Expires (MM / YY)"
-msgstr ""
-
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:33
+#: code:addons/payment_stripe/static/src/js/stripe.js:0
 #, python-format
-msgid "Just one more second, confirming your payment..."
+msgid "Just one more second, We are redirecting you to Stripe..."
 msgstr ""
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Manual Configuration"
-msgstr ""
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Ogone"
-msgstr "Ogone"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "PayUmoney"
-msgstr ""
-
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_acquirer
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_acquirer
 msgid "Payment Acquirer"
 msgstr "Príjemca platby "
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_token
-msgid "Payment Token"
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_token__stripe_payment_method
+msgid "Payment Method ID"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_transaction
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_token
+msgid "Payment Token"
+msgstr "Platobný token"
+
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_transaction
 msgid "Payment Transaction"
 msgstr "Platobná transakcia"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:59
+#: code:addons/payment_stripe/static/src/js/stripe.js:0
 #, python-format
 msgid "Payment error"
 msgstr ""
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Paypal"
-msgstr "Paypal"
-
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:174
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid ""
 "Perhaps the problem can be solved by double-checking your credit card "
 "details, or contacting your bank?"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__provider
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__provider
 msgid "Provider"
 msgstr "Poskytovateľ"
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Sips"
-msgstr "Sips"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
+#. module: payment_stripe
+#: model:ir.model.fields.selection,name:payment_stripe.selection__payment_acquirer__provider__stripe
 msgid "Stripe"
+msgstr "Stripe"
+
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_transaction__stripe_payment_intent
+msgid "Stripe Payment Intent ID"
 msgstr ""
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_publishable_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_transaction__stripe_payment_intent_secret
+msgid "Stripe Payment Intent Secret"
+msgstr ""
+
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_publishable_key
 msgid "Stripe Publishable Key"
-msgstr ""
+msgstr "Verejný kľúč Stripe"
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_secret_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_secret_key
 msgid "Stripe Secret Key"
-msgstr ""
+msgstr "Tajný kľúč Stripe"
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:172
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe gave us the following info about the problem: '%s'"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:184
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe: %s orders found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:180
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe: no order found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:170
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
+#, python-format
+msgid ""
+"Unable to convert Stripe customer for SCA compatibility. Is there at least "
+"one card for this customer in the Stripe backend?"
+msgstr ""
+
+#. module: payment_stripe
+#. openerp-web
+#: code:addons/payment_stripe/static/src/js/payment_form.js:0
+#, python-format
+msgid "Unable to save card"
+msgstr ""
+
+#. module: payment_stripe
+#. openerp-web
+#: code:addons/payment_stripe/static/src/js/payment_form.js:0
+#, python-format
+msgid "We are not able to add your payment method at the moment. "
+msgstr ""
+
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "We're sorry to report that the transaction has failed."
 msgstr ""
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Wire Transfer"
-msgstr "Drôtový prenos"
