--- a/payment_rave/i18n/tr.po
+++ b/payment_rave/i18n/tr.po
@@ -1,22 +1,21 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * payment_rave
+# 	* payment_stripe
 # 
 # Translators:
-# Ediz Duman <neps1192@gmail.com>, 2018
-# Ayhan KIZILTAN <akiziltan76@hotmail.com>, 2018
-# Martin Trigaux, 2018
-# Murat Kaplan <muratk@projetgrup.com>, 2018
-# Ertuğrul Güreş <ertugrulg@projetgrup.com>, 2018
-# Hüseyin Cem Aras <hcemaras@gmail.com>, 2018
-# Umur Akın <umura@projetgrup.com>, 2018
+# Ediz Duman <neps1192@gmail.com>, 2019
+# Martin Trigaux, 2019
+# Murat Kaplan <muratk@projetgrup.com>, 2019
+# Ertuğrul Güreş <ertugrulg@projetgrup.com>, 2019
+# Umur Akın <umura@projetgrup.com>, 2019
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server saas~11.5\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-09-21 13:17+0000\n"
-"PO-Revision-Date: 2018-09-21 13:17+0000\n"
-"Last-Translator: Umur Akın <umura@projetgrup.com>, 2018\n"
+"POT-Creation-Date: 2019-10-07 07:13+0000\n"
+"PO-Revision-Date: 2019-08-26 09:12+0000\n"
+"Last-Translator: Umur Akın <umura@projetgrup.com>, 2019\n"
 "Language-Team: Turkish (https://www.transifex.com/odoo/teams/41243/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,15 +23,15 @@ msgstr ""
 "Language: tr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:9
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "&times;"
 msgstr "&times;"
 
-#. module: payment_rave
-#: model:ir.model.fields,help:payment_rave.field_payment_acquirer__stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,help:payment_stripe.field_payment_acquirer__stripe_image_url
 msgid ""
 "A relative or absolute URL pointing to a square image of your brand or "
 "product. As defined in your Stripe profile. See: "
@@ -42,111 +41,61 @@ msgstr ""
 "URL. Stripe porfilinde tanımladığınız gibi. See: "
 "https://stripe.com/docs/checkout"
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Adyen"
-msgstr "Adyen"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Authorize.Net"
-msgstr "Authorize.Net"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Buckaroo"
-msgstr "Buckaroo"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "CVC"
-msgstr "CVC"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Card number"
-msgstr "Kart numarası"
-
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Cardholder name"
-msgstr "Kart Sahibinin Adı"
-
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_image_url
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_image_url
 msgid "Checkout Image URL"
 msgstr "Ödeme Resmi URL'si"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:15
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "Close"
 msgstr "Kapat"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/xml/stripe_templates.xml:8
+#: code:addons/payment_stripe/static/src/xml/stripe_templates.xml:0
 #, python-format
 msgid "Error"
 msgstr "Hata"
 
-#. module: payment_rave
-#: model_terms:ir.ui.view,arch_db:payment_rave.stripe_s2s_form
-msgid "Expires (MM / YY)"
-msgstr "Son Kullanma Tarihi (AA/YY)"
-
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:33
+#: code:addons/payment_stripe/static/src/js/stripe.js:0
 #, python-format
-msgid "Just one more second, confirming your payment..."
-msgstr "Lütfen bekleyiniz, ödemeniz onaylanıyor"
+msgid "Just one more second, We are redirecting you to Stripe..."
+msgstr ""
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Manual Configuration"
-msgstr "Manuel Yapılandırma"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Ogone"
-msgstr "Ogone"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "PayUmoney"
-msgstr "PayUmoney"
-
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_acquirer
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_acquirer
 msgid "Payment Acquirer"
 msgstr "Ödeme Alıcısı"
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_token
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_token__stripe_payment_method
+msgid "Payment Method ID"
+msgstr ""
+
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_token
 msgid "Payment Token"
 msgstr "Ödeme Token'ı"
 
-#. module: payment_rave
-#: model:ir.model,name:payment_rave.model_payment_transaction
+#. module: payment_stripe
+#: model:ir.model,name:payment_stripe.model_payment_transaction
 msgid "Payment Transaction"
 msgstr "Ödeme İşlemi"
 
-#. module: payment_rave
+#. module: payment_stripe
 #. openerp-web
-#: code:addons/payment_rave/static/src/js/stripe.js:59
+#: code:addons/payment_stripe/static/src/js/stripe.js:0
 #, python-format
 msgid "Payment error"
 msgstr "Ödeme hatası"
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Paypal"
-msgstr "Paypal"
-
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:174
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid ""
 "Perhaps the problem can be solved by double-checking your credit card "
@@ -155,56 +104,78 @@ msgstr ""
 "Belki problem kredi kartı bilgilerinizi ya da bankanızla anlaşmanızı bir kez"
 " daha kontrol ederek çözülebilir? "
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__provider
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__provider
 msgid "Provider"
 msgstr "Sağlayıcı"
 
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Sips"
-msgstr "Sips"
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
+#. module: payment_stripe
+#: model:ir.model.fields.selection,name:payment_stripe.selection__payment_acquirer__provider__stripe
 msgid "Stripe"
 msgstr "Stripe"
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_publishable_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_transaction__stripe_payment_intent
+msgid "Stripe Payment Intent ID"
+msgstr ""
+
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_transaction__stripe_payment_intent_secret
+msgid "Stripe Payment Intent Secret"
+msgstr ""
+
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_publishable_key
 msgid "Stripe Publishable Key"
 msgstr "Stripe yayınlanabilir şifre"
 
-#. module: payment_rave
-#: model:ir.model.fields,field_description:payment_rave.field_payment_acquirer__stripe_secret_key
+#. module: payment_stripe
+#: model:ir.model.fields,field_description:payment_stripe.field_payment_acquirer__stripe_secret_key
 msgid "Stripe Secret Key"
 msgstr "Stripe Gizli Şifre"
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:172
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe gave us the following info about the problem: '%s'"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:184
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe: %s orders found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:180
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "Stripe: no order found for reference %s"
 msgstr ""
 
-#. module: payment_rave
-#: code:addons/payment_rave/models/payment.py:170
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
+#, python-format
+msgid ""
+"Unable to convert Stripe customer for SCA compatibility. Is there at least "
+"one card for this customer in the Stripe backend?"
+msgstr ""
+
+#. module: payment_stripe
+#. openerp-web
+#: code:addons/payment_stripe/static/src/js/payment_form.js:0
+#, python-format
+msgid "Unable to save card"
+msgstr ""
+
+#. module: payment_stripe
+#. openerp-web
+#: code:addons/payment_stripe/static/src/js/payment_form.js:0
+#, python-format
+msgid "We are not able to add your payment method at the moment. "
+msgstr ""
+
+#. module: payment_stripe
+#: code:addons/payment_stripe/models/payment.py:0
 #, python-format
 msgid "We're sorry to report that the transaction has failed."
 msgstr "İşlemin başarısız olduğunu bildirdiğimiz için üzgünüz."
-
-#. module: payment_rave
-#: selection:payment.acquirer,provider:0
-msgid "Wire Transfer"
-msgstr "Wire Transfer"
